--- a/index.html
+++ b/index.html
@@ -23,9 +23,23 @@
                 </p>
             </div>
             <div class="available-div">
-                <label>
+                <!-- <label>
                     <input type="checkbox" id="available-products"> محصولات موجود
-                </label>
+                </label> -->
+                <section>
+                    <input type="checkbox" id="one">
+                    <label for="one">
+                        <span id="span-check"></span>
+                        <span id="span-text">محصولات موجود</span>
+                        <ins><i>محصولات موجود</i></ins>
+                    </label>
+                </section>
+                <!-- <input id='one' type='checkbox' />
+                <label for='one'>
+                    <span></span>
+                    محصولات موجود
+                    <ins><span>محصولات موجود</span></ins>
+                </label> -->
             </div>
         </div>
     </div>
