--- a/index.html
+++ b/index.html
@@ -24,14 +24,21 @@
             </div>
             <div class="available-div">
                 <section>
-                    <input type="checkbox" id="one">
-                    <label for="one">
+                    <input type="checkbox" id="existProduct">
+                    <label for="existProduct">
                         <span id="span-check"></span>
                         <span id="span-text">محصولات موجود</span>
                         <ins><i>محصولات موجود</i></ins>
                     </label>
                 </section>
             </div>
+        </div>
+        <br>
+        <div class="select">
+            <select name="sort" id="sort" class="clasic">
+                <option value="byEdited">مرتب سازی بر اساس آخرین ویرایش</option>
+                <option value="byCreated">مرتب سازی بر اساس تاریخ ساختن</option>
+            </select>
         </div>
         <br>
         <div class="add-product">
