add file functions

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                 </p>
             </div>
             <div class="available-div">
-                <section>
+                <section class="section-exist">
                     <input type="checkbox" id="existProduct">
                     <label for="existProduct">
-                        <span id="span-check"></span>
-                        <span id="span-text">محصولات موجود</span>
+                        <span class="span-check" id="span-check"></span>
+                        <span class="span-text" id="span-text">محصولات موجود</span>
                         <ins><i>محصولات موجود</i></ins>
                     </label>
                 </section>
@@ -45,7 +45,7 @@
             <form id="add-product-form">
                 <input type="text" class="input" name="productTitle" placeholder="عنوان محصول">
                 <input type="text" class="input" name="productPrice" placeholder="قیمت محصول">
-                <button class="add-btn">افزودن</button>
+                <button class="btn add-btn">افزودن</button>
             </form>
         </div>
     </div>
@@ -53,6 +53,7 @@
 
     </div>
 </body>
+<script src="./scripts/functions.js"></script>
 <script src="./scripts/app.js"></script>
 
 </html>
