--- a/index.html
+++ b/index.html
@@ -45,14 +45,15 @@
             <form id="add-product-form">
                 <input type="text" class="input" name="productTitle" placeholder="عنوان محصول">
                 <input type="text" class="input" name="productPrice" placeholder="قیمت محصول">
-                <button class="btn add-btn">افزودن</button>
+                <button class="btn add-btn"> افزودن <i class="fa-sharp fa-solid fa-plus"></i></button>
             </form>
         </div>
     </div>
     <div class="container" id="products">
-
+        
     </div>
 </body>
+<script src="./scripts/uuid.min.js"></script>
 <script src="./scripts/functions.js"></script>
 <script src="./scripts/app.js"></script>
 
