--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
         
     </div>
 </body>
+<script src="./scripts/moment.js"></script>
+<script src="./scripts/jalali-moment.js"></script>
 <script src="./scripts/uuid.min.js"></script>
 <script src="./scripts/functions.js"></script>
 <script src="./scripts/app.js"></script>
