--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <select name="sort" id="sort" class="clasic">
                 <option value="byEdited">مرتب سازی بر اساس آخرین ویرایش</option>
                 <option value="byCreated">مرتب سازی بر اساس تاریخ ساختن</option>
+                <option value="byPrice">مرتب سازی بر اساس قیمت</option>
             </select>
         </div>
         <br>
